--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Animal Migration Api",
+    "name": "animalmigrationapi",
     "version": "1.0.0",
     "description": "Api for animal migration APP",
     "license": "MIT",
